# solarbatteryield

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  api.py  config.py  load_regression.py  models.py  pyproject.toml  report.py  requirements.txt  sidebar.py  simulation.py  state.py  streamlit_app.py  utils.py
.github/workflows/: keepalive.yml  release.yml  test.yml
.streamlit/: config.toml
docs/: DYNAMODB_SETUP.md
scripts/: analyze_cec_inverters.py  analyze_snapshot_scenarios.py  build_regression_db.py
src/solarbatteryield/: __init__.py  api.py  config.py  inverter_efficiency.py  load_regression.py  models.py  persistence.py  report.py  sidebar.py  simulation.py  state.py  streamlit_app.py  utils.py
src/solarbatteryield/report/: __init__.py  chart_config.py  context.py  core.py  footer.py  header.py  landing.py  longterm_chart.py  monthly_chart.py  soc_chart.py  tables.py
src/solarbatteryield/sidebar/: __init__.py  consumption.py  core.py  location.py  prices.py  profile_io.py  pv_config.py  storage_config.py
src/solarbatteryield/simulation/: __init__.py  _core.py  h0_profile.py  load.py  load_regression.py  weekly_recorder.py
src/solarbatteryield/simulation/battery/: __init__.py  _ac_coupled.py  _base.py  _dc_coupled.py  _no_battery.py  strategy.py
src/solarbatteryield/simulation/data/: regression_db.json
tests/: TESTING_GUIDELINES.md  conftest.py  test_api.py  test_battery.py  test_chart_config.py  test_discharge_strategies.py  test_expert_mode.py  test_h0_profile.py  test_inverter_efficiency.py  test_load_regression.py  test_models.py  test_package_exports.py  test_persistence.py  test_profile_io.py  test_report_context.py  test_simulation.py  test_smoke.py  test_snapshots.py  test_state.py  test_utils.py
tests/__snapshots__/: test_snapshots.ambr
