[project]
name = "solarbatteryield"
version = "1.2.3"
description = "SolarBatterYield- Analyze PV systems with battery storage"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "streamlit>=1.45",
    "numpy>=1.24",
    "pandas>=2.0",
    "requests>=2.28",
    "altair>=5.0",
    "holidays>=0.40",
]


[dependency-groups]
dev = [
    "h5py>=3.16.0",
    "pytest>=8.0",
    "pytest-timeout>=2.0",
    "syrupy>=4.0",
]

[project.scripts]
solarbatteryield = "solarbatteryield.streamlit_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/solarbatteryield"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --ignore=tests/test_smoke.py"


